# amssa

./: Cargo.toml
src/: feat.rs  lib.rs  phonemes.rs  search.rs
src/feat/: borsh.rs  bytemuck.rs  serde.rs
