[package]
name = "amssa"
version = "0.2.0"
edition = "2024"
description = "\"Aritz's modified string search algorithms\""
license = "GPL-3.0-or-later"

[dependencies]
itertools = "0.14.0"
deunicode = "1.6.2"
serde = {version = "1.0.219", optional = true}
bytemuck = {version = "1.23.1", optional = true}
borsh = {version = "1.5.7", optional = true}
strsim = {version = "0.11.1"}
